--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
         "barryvdh/laravel-debugbar": "~2.4",
         "caouecs/laravel-lang": "~3.0",
         "laravel/framework": "5.3.*",
-        "twbs/bootstrap": "^4.1",
-        "zizaco/entrust": "^1.9"
+        "twbs/bootstrap": "^4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.7",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "zizaco/entrust": "5.2.x-dev"
+        
     },
     "autoload": {
         "classmap": [
