--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.22",
         "barryvdh/laravel-debugbar": "~2.4",
+        "barryvdh/laravel-dompdf": "^0.8.2",
         "caouecs/laravel-lang": "~3.0",
         "laravel/framework": "5.3.*",
         "twbs/bootstrap": "^4.1"
