--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-dompdf": "^0.8.2",
         "caouecs/laravel-lang": "~3.0",
         "laravel/framework": "5.3.*",
+        "maatwebsite/excel": "~2.1.0",
         "twbs/bootstrap": "^4.1",
         "yajra/laravel-datatables-oracle": "~6.0"
     },
